Since 5.4
=========
* NEW "with rgbimage" and "with rgbalpha" accept single column ARGB input
* FIX y autoscaling of default "with filledcurves" #Bug 2294

Changes in 5.4
==============
* NEW support for 64-bit integer arithmetic
* NEW support for voxel grids
* NEW plot ... with table if <expression>
* NEW "set walls" command to show xy xz and yz planes in 3D plots
* NEW "set clip radial" for line segments in polar mode plots
* NEW "splot ... with isosurface"
* NEW "splot ... with circles"
* NEW "splot ... with boxes"
* NEW "plot ... with arrows"
* NEW "plot ... with polygons"
* NEW "set view projection {xz|yz}"
* NEW "set datafile columnheaders"
* NEW per-plot fillcolor and fillstyle for pm3d surfaces
* NEW allow separate color column with dgrid3d surfaces (but not color splines)
* NEW string function trim(" padded string ") removes leading and trailing whitespace
* NEW unicode escape sequences \U+hhhh
* NEW order N Bessel functions of 1st and 2nd kind (besjn besyn)
* NEW modified Bessel functions I0 (besi0) and I1 (besi1)
* NEW modified Bessel function of order n (besin)
* NEW "set object polygon depthsort" as an alternative to front/back/behind
* NEW "set pixmap" object-like bitmap images from png/gif/jpeg input files
* NEW overflow avoidance extends range of arguments handled by complex division
* NEW largely extended pcl5 terminal supports PCL5e/PCL5c printers
* NEW revised pstricks and texdraw LaTeX terminals
* NEW extended dospc terminal (DOS32/OpenWatcom)
* NEW extended svga terminal using the (M)GRX library (DOS32/DJGPP)
* NEW heavily revised fig terminal
* NEW LaTeX terminal pict2e uses the LaTeX2e pict2e environment
* NEW Left-click on hypertext label will copy text to clipboard (wxt qt)
* NEW smooth option "zsort" controls order that points are plotting in
* NEW multiple textbox styles
* NEW Time/date input recognizes format %p to handle am/pm field
* EXPERIMENTAL "set mouse mouseformat function <stringval_from_xy(x,y)>"
* EXPERIMENTAL load $DATABLOCK