@@ -1,7 +1,11 @@
 Since 5.4
 =========
 * NEW "with rgbimage" and "with rgbalpha" accept single column ARGB input
+* NEW add toggle in toolbar widget for qt terminal option "ctrl-q"
 * FIX y autoscaling of default "with filledcurves" #Bug 2294
+* FIX placement of mirrored x and y tics in mode 'set view projection ...'
+* FIX pm3d lighting calculation for degenerate quadrangles
+* FIX botched deprecation of old syntax for "call" arguments #Bug 2298
 
 Changes in 5.4
 ==============
